# CryptoScope

./: .env.example  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  GIT_WORKFLOW_BACKLOG.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
frontend/: .dockerignore  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CategoryFilter.tsx  DataTable.tsx  StatCard.tsx
frontend/src/hooks/: index.ts  use-settings-storage.ts  useSaveIndicator.ts  useScreener.ts  useSortState.ts
frontend/src/lib/: query-provider.tsx
scripts/: build-docker.sh  dev.sh
src/: cli.rs  error.rs  lib.rs  main.rs  test_utils.rs
src/api/: auth.rs  error.rs  exchanges.rs  mod.rs  refresh.rs  screener.rs  stats.rs  symbols.rs  types.rs  utils.rs
src/core/db/: connection.rs
src/core/exchange/: bybit.rs  exchange_trait.rs  factory.rs  mod.rs
src/core/fetcher/: mod.rs
src/core/models/: contract_type.rs  price.rs  statistics.rs  symbol.rs
src/db/: repository.rs  schema.rs
src/exchange/: bybit.rs  exchange_trait.rs  factory.rs  mod.rs
src/fetcher/: instrument_fetcher.rs  mod.rs
src/models/: contract_type.rs  mod.rs  price.rs  response.rs  statistics.rs  symbol.rs
src/output/: formatter.rs  json_output.rs  mod.rs
src/screener/: calculator.rs  fetcher.rs  mod.rs  output.rs
src/tui/: app.rs  key_handler.rs  mod.rs  mouse.rs  mouse_state.rs  popup_state.rs  runner.rs  screener_service.rs  theme.rs
(+26 files in other folders)
